Borrow, Return, Fines implemented