@@ -3,10 +3,11 @@ package com.example.archlibrary.service;
 import com.example.archlibrary.model.User;
 import com.example.archlibrary.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
@@ -14,9 +15,14 @@ public class UserDetailsServiceImpl implements UserDetailsService {
     @Autowired
     private UserRepository repo;
 
-    @Override
-    public UserDetails loadUserByUsername(String email) {
-        User user = repo.findByEmail(email).orElseThrow(() -> new UsernameNotFoundException("Not found"));
-        return new org.springframework.security.core.userdetails.User(user.getEmail(), user.getPassword(), Collections.emptyList());
-    }
+@Override
+public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+    User user =  repo.findByEmail(email)
+            .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+    return new org.springframework.security.core.userdetails.User(
+            user.getEmail(),
+            user.getPassword(),
+            List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().toUpperCase()))
+    );
+}
 }
